fixed issue with the tag icon not showing under bengali section

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -308,3 +308,6 @@ body .bangla *{
     color:teal;
     cursor: pointer;
 }
+.fa-tag:before{
+    font-family: 'Font Awesome 5 Free';
+}
